libs/extractor/src/snapshots/extractor__tests__extract_nested_selector-6.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box} from '@devup-ui/core'\n        <Box \n          selectors={{\n            \"&::placeholder\": {\n              selectors: {\n                \"&:active\": {\n                  selectors: {\n                    \"&:hover\": {\n                      color: \"red\",\n                    }\n                  }\n                }\n              }\n            },\n        }} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: Some(
                    Selector(
                        "&::placeholder:active:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"OHa80dao4icpa6vjnu\" />;\n",
}
